<resources>
    <string name="app_name">Android Practical</string>
    <string name="button_name">Submit</string>
    <string name="button_icon_desc">ImageButton</string>
    <string name="imageButton_text">Image Button</string>
    <string name="form">Form</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="hobby">Hobbies:-</string>
    <string name="cricket">Cricket</string>
    <string name="reading">Reading</string>
    <string name="writing">Writing</string>
    <string name="customToast">Custom Toast</string>
    <string name="uiWidgets">UI Widgets</string>
    <string name="switchbutton">Switch</string>
    <string name="helloWord">helloWord</string>
    <string name="to">to</string>
    <string name="layout">Layout</string>
    <string name="btnLinearLayout">Linear Layout</string>
    <string name="textofFeedbackForm">Enter feedback details to send to the developer:</string>
    <string name="feedback_name_hint">Your Name</string>
    <string name="feedback_email_hint">Your Email</string>
    <string name="feedback_hint">Feedback Details...</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="vary_Good">Vary Good</string>
    <string name="medium">Medium</string>
    <string name="cbEmailResponse">"Would you like an email response? "</string>
    <string name="btnsendFeedBack">Send Feedback</string>
    <string name="btnRelativeLayout">Relative Layout</string>
    <string name="btnConstraintLayout">Constraint Layout</string>
    <string name="btnTableLayout">Table Layout</string>
    <string name="table_view">Table Layout Example</string>
    <string name="tvYagnik">Yagnik</string>
    <string name="tvJay">Jay</string>
    <string name="tvKrupa">Krupa</string>
    <string name="tvMeet">Meet</string>
    <string name="btnGridLayout">Grid Layout</string>
    <string name="btnFrameLayout">Frame Layout</string>
    <string name="btnwebLayout">Web Layout</string>
    <string name="url">https://www.google.com/</string>
    <string name="no">No.</string>
    <string name="user_name">User Name</string>
    <string name="no1">1</string>
    <string name="no2">2</string>
    <string name="no3">3</string>
    <string name="recyclerviewAndAdapter">Recyclerview and Adapter</string>
    <string name="ListViewWithAdapter">List View With Adapter</string>
    <string name="list_title">title</string>
    <string name="list_description">description</string>
    <string name="c_language_name">C</string>
    <string name="cpp_language_name">C++</string>
    <string name="java_language_name">Java</string>
    <string name="swift_language_name">Swift</string>
    <string name="python_language_name">Python</string>
    <string name="c_description"> C language</string>
    <string name="cpp_description">C++ language</string>
    <string name="java_description">Java language</string>
    <string name="swift_description">Swift language</string>
    <string name="python_description">Python language</string>
    <string name="recyclerView">"Recycler View "</string>
    <string name="btnGridViewWithRecycler">Grid View With Recycler View</string>
    <string name="fragment1">Home Fragment</string>
    <string name="fragment2">Profile Fragment</string>
    <string name="btnViewPager">View Pager</string>
    <string name="recent">Recent</string>
    <string name="my_favorites">My favorites</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="btnBottomNavigation">Bottom Navigation</string>
    <string name="movie_name">movie name</string>
    <string name="first_appearance">First appearance:-</string>
    <string name="team">Team:-</string>
    <string name="captainAmerica">Captain America</string>
    <string name="ironMan">Iron Man</string>
    <string name="wolvarine">Wolvarine</string>
    <string name="spiderman">Spiderman</string>
    <string name="thor">Thor</string>
    <string name="captainAmericaFA">1941</string>
    <string name="ironManFA">1963</string>
    <string name="wolvarineFA">1974</string>
    <string name="spidermanFA">1962</string>
    <string name="thorFA">1962</string>
    <string name="avengers">Avengers</string>
    <string name="x_men">X_Men</string>
    <string name="real_name">Real Name :- </string>
    <string name="bio">Bio :-</string>
    <string name="CreatedBy">Created By :- </string>
    <string name="publisher">Publisher : -</string>
    <string name="captaion_amrica_real_name">Steve Rogers</string>
    <string name="captaion_amrica_created_by">Joe Simon</string>
    <string name="captaion_amrica_publisher">Marvel Comics</string>
    <string name="captaion_amrica_bio">Steven Rogers was born in the Lower East Side of Manhattan, New York City, in 1925 to poor Irish immigrants, Sarah and Joseph Rogers.[54] Joseph died when Steve was a child, and Sarah died of pneumonia while Steve was a teen.</string>
    <string name="iron_man_real_name">Tony Stark</string>
    <string name="iron_man_created_by">Stan Lee</string>
    <string name="iron_man_publisher">Marvel Comics</string>
    <string name="iron_man_bio">Anthony Edward Stark, the son of wealthy industrialist and head of Stark Industries, Howard Stark, and Maria Stark. A boy genius, he enters MIT at the age of 15 to study electrical engineering and later receives master\'s degrees in electrical engineering and physics.</string>
    <string name="wolvarine_real_name">James Howlett</string>
    <string name="wolvarine_created_by">Len Wein</string>
    <string name="wolvarine_publisher">Marvel Comics</string>
    <string name="wolvarine_bio">Wolverine was born James Howlett in northern Alberta, Canada, during the late 1880s, purportedly to rich farm owners John and Elizabeth Howlett, though he is actually the illegitimate son of the Howletts\' groundskeeper, Thomas Logan.</string>
    <string name="spiderman_real_name">Peter Parker</string>
    <string name="spiderman_created_by">Stan Lee</string>
    <string name="spiderman_publisher">Marvel Comics</string>
    <string name="spiderman_bio">\"Forest Hills, Queens, New York, Midtown High School student Peter Parker is a science-whiz orphan living with his Uncle Ben and Aunt May. \"</string>
    <string name="thor_real_name">Thor Odinson</string>
    <string name="thor_created_by">Stan Lee</string>
    <string name="thor_publisher">Marvel Comics</string>
    <string name="thor_bio">Thor\'s father Odin decides his son needed to be taught humility and consequently places Thor (without memories of godhood) into the body and memories of an existing, partially disabled human medical student, Donald Blake.</string>
    <string name="btn_Activity_Intent_Fragment"><![CDATA["Activity, Intent & Fragment "]]></string>
    <string name="title_activity_all_intent_and_fragment">AllActivityIntentAndFragmentActivity
    </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btn_fragment">Fragment</string>
    <string name="gallery">Gallery</string>
    <string name="add_message">Add Message</string>
    <string name="view_message">View Message</string>
    <string name="add_back_stack_name">Home Page</string>
    <string name="btn_fragments_with_bottom_navigation">Fragments With Bottom Navigation</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="intent_data">data</string>
    <string name="enter_tye_text">Enter Message</string>
    <string name="website_link">Enter Your Website Link</string>
    <string name="open_link">Open the Link</string>
    <string name="btn_send_data_viewModel">Send Using View Model</string>
    <string name="btn_send_data_bundle">Send Using Bundle</string>
    <string name="receive_message_using_view_model">Message Receive Using View Model</string>
    <string name="receive_message_using_bundle">Message Receive Using Bundle</string>
    <string name="switch_to_jetpack_compose">Switch To Jet Pack Compose</string>
    <string name="second_edit_text">Please Enter message In Second Edit Text..</string>
    <string name="message_send_sucess">Message send Successfully..</string>
    <string name="first_text_view">Please Enter message In First Edit Text..</string>
    <string name="message">MESSAGE</string>
    <string name="key">KEY</string>
    <string name="enter_proper_url">Enter Proper URL..</string>
    <string name="btn_other_views">Other Important Views</string>
    <string name="btn_webView">Web View</string>
    <string name="btn_scroll_view">Scroll View</string>
    <string name="btn_search_view">Search View</string>
    <string name="button">Button</string>
    <string name="about_c_language">The C Language is developed by Dennis Ritchie for creating system applications that directly interact with the hardware devices such as drivers, kernels, etc. C programming is considered as the base for other programming languages, that is why it is known as mother language.</string>
    <string name="about_cpp_language">C++ is an object-oriented programming language. It is an extension to C programming. C++ includes all topics such as control statements, objects and classes, inheritance, constructor, destructor, this, static, polymorphism, abstraction, abstract class, interface, namespace, encapsulation, arrays, strings, exception handling, File IO, etc.</string>
    <string name="about_java_language"> The Java programming language was developed by Sun Microsystems in the early 1990s. Although it is primarily used for Internet-based applications, Java is a simple, efficient, general-purpose language. Java was originally designed for embedded network applications running on multiple platforms.</string>
    <string name="about_python_language">Python is an interpreted, interactive, object-oriented programming language. It incorporates modules, exceptions, dynamic typing, very high level dynamic data types, and classes. It supports multiple programming paradigms beyond object-oriented programming, such as procedural and functional programming.</string>
    <string name="btn_load_pdf">Load Pdf</string>
    <string name="not_found_text">No match found!!!</string>
    <string name="horizontal_scroll_view">Horizontal Scroll View</string>
    <string name="vertical_scroll_view">Vertical Scroll View</string>
    <string name="google_query_string">https://www.google.com/search?q=</string>
    <string name="embedded_string"><![CDATA[https://docs.google.com/gview?embedded=true&url=]]></string>
    <string name="pdf_link">https://www.ets.org/Media/Tests/GRE/pdf/gre_research_validity_data.pdf</string>
    <string name="btn_architecture">Architecture</string>
    <string name="btn_web_services">Web Services</string>
    <string name="btn_Login_Without_ThirdParty">Login Without ThirdParty</string>
    <string name="btn_retrofit">Retrofit</string>
    <string name="first_name">FirstName:-</string>
    <string name="id">ID:-</string>
    <string name="last_name">LastName:-</string>
    <string name="email">Email:-</string>
    <string name="avatar">avatar</string>
    <string name="user_email">email</string>
    <string name="user_first_name">first_name</string>
    <string name="data">data</string>
    <string name="content_type">Content-Type</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_search">Search</string>
    <string name="TextInputLayout">Text Input Layout</string>
    <string name="section_one">Section1</string>
    <string name="section_two">Section2</string>
</resources>