<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/section_one">
        <menu>
            <item
                android:id="@+id/navCamera"
                android:icon="@drawable/ic_baseline_photo_camera_24"
                android:title="@string/menu_camera" />
            <item
                android:id="@+id/navGallery"
                android:icon="@drawable/ic_baseline_image_24"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/navSearch"
                android:icon="@drawable/ic_baseline_search_24"
                android:title="@string/menu_search" />
        </menu>
    </item>
    <item android:title="@string/section_two">
        <menu>
            <item
                android:id="@+id/TextInputLayout"
                android:title="@string/TextInputLayout" />
        </menu>
    </item>
</menu>