<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ButtonDemoActivity" >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/simpleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/button_name" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/button_icon_desc"
        android:src="@android:drawable/sym_def_app_icon" />

    <Button
        android:id="@+id/imageViewWithText"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:drawableLeft="@drawable/ic_launcher_foreground"
        android:text="@string/imageButton_text" />

    <ToggleButton
        android:id="@+id/simpleToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/black"
        android:textColor="@color/white" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/switchbutton" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/simpleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/simpleRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/btnForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form" />

</LinearLayout>