<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AllViewsAndAdaptersActivity" >

    <Button
        android:id="@+id/btnListViewWithAdapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/ListViewWithAdapter"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/btnListViewWithAdapter" />

    <Button
        android:id="@+id/btnGridViewWithRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/btnGridViewWithRecycler"
        app:layout_constraintTop_toBottomOf="@+id/btnRecyclerView" />

    <Button
        android:id="@+id/btnViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/btnViewPager"
        app:layout_constraintTop_toBottomOf="@+id/btnGridViewWithRecycler" />

    <Button
        android:id="@+id/btnBottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/btnBottomNavigation"
        app:layout_constraintTop_toBottomOf="@+id/btnViewPager" />

</androidx.constraintlayout.widget.ConstraintLayout>