<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConstraintLayoutActivity" >

    <TextView
        android:id="@+id/textViewForTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textofFeedbackForm"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/custom_border"
        android:hint="@string/feedback_name_hint"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewForTitle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/custom_border"
        android:hint="@string/feedback_email_hint"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/custom_border"
        android:padding="10dp"
        android:prompt="@string/app_name"
        android:scrollbarSize="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/custom_border"
        android:hint="@string/feedback_hint"
        android:lines="6"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <CheckBox
        android:id="@+id/cbforEmailVarification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbEmailResponse"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFeedback" />

    <Button
        android:id="@+id/btnSendFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/btnsendFeedBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbforEmailVarification" />
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="buuton2"
        app:layout_constraintStart_toEndOf="@+id/btnSendFeedback"
        app:layout_constraintTop_toBottomOf="@id/cbforEmailVarification"/>

</androidx.constraintlayout.widget.ConstraintLayout>